@@ -15,6 +15,8 @@
  */
 package org.springframework.webflow.executor;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.springframework.binding.mapping.AttributeMapper;
 import org.springframework.util.Assert;
 import org.springframework.webflow.context.ExternalContext;
@@ -91,6 +93,8 @@ import org.springframework.webflow.execution.repository.FlowExecutionRepository;
  * @author Colin Sampaleanu
  */
 public class FlowExecutorImpl implements FlowExecutor {
+	
+	private static final Log logger = LogFactory.getLog(FlowExecutorImpl.class);
 
 	/**
 	 * A locator to access flow definitions registered in a central registry.
@@ -191,6 +195,9 @@ public class FlowExecutorImpl implements FlowExecutor {
 	}
 
 	public ResponseInstruction launch(String flowDefinitionId, ExternalContext context) throws FlowException {
+		if (logger.isDebugEnabled()) {
+			logger.debug("Launching flow execution for flow definition '" + flowDefinitionId + "'");
+		}
 		// expose external context as a thread-bound service
 		ExternalContextHolder.setExternalContext(context);
 		try {
@@ -215,6 +222,10 @@ public class FlowExecutorImpl implements FlowExecutor {
 
 	public ResponseInstruction resume(String flowExecutionKey, String eventId, ExternalContext context)
 			throws FlowException {
+		if (logger.isDebugEnabled()) {
+			logger.debug("Resuming flow execution with key '" + flowExecutionKey +
+					"' on user event '" + eventId + "'");
+		}
 		// expose external context as a thread-bound service
 		ExternalContextHolder.setExternalContext(context);
 		try {
@@ -247,6 +258,9 @@ public class FlowExecutorImpl implements FlowExecutor {
 	}
 
 	public ResponseInstruction refresh(String flowExecutionKey, ExternalContext context) throws FlowException {
+		if (logger.isDebugEnabled()) {
+			logger.debug("Refreshing flow execution with key '" + flowExecutionKey + "'");
+		}
 		// expose external context as a thread-bound service
 		ExternalContextHolder.setExternalContext(context);
 		try {
